# ArcanoidPort

./: CMakeLists.txt  README.md
JavaArcanoid/: С20РЭС Москалев Ю.А. ПЗ.docx
JavaArcanoid/Arcanoid/: pom.xml
JavaArcanoid/Arcanoid/src/main/java/com/mycompany/arcanoid/: Arcanoid.java  Ball.java  DestroyableBox.java  GameWindow.java  Hitbox.java  MathVector.java  PlayerPlatform.java
src/: Arc_constants.h  Arcanoid.cpp  Arcanoid.h  Ball.h  DestroyableBox.h  GameWindow.h  Hitbox.cpp  Hitbox.h  Main.cpp  MessageBox.h  PlayerPlatform.h
src/OEFrames/: BaseWindowObj.cpp  BaseWindowObj.h  OEFrameWrapper.cpp  OELabelWrapper.cpp  OEWindow.cpp  OEWindow.h
src/OEFrames/OEInterfaces/: IWindowActions.h
src/OESDL_Module/: OESDL_Module.cpp  OESDL_Module.h  OETexture.cpp  OETexture.h  SDLColors.h
src/OESDL_Module/OET_Figures/: OET_Square.h
src/OESDL_Module/SDLMonitor/: SDLModitor.h  ThreadsafeVar.h
src/OESDL_Module/SDL_Include/: SDL_INCLUDE.h
src/OEUtilities/: MathVectorExtention.h  OEVectorMathTemplate.h
src/SDL2_gfx_files/lib x64/: SDL2_gfx.lib
